@@ -2,6 +2,7 @@
 
 	* src/load.c: Better handling of default download mode.  Also
 	display information when I/O errors occor (was silent).
+	(do_load): Handle case when X-modem protocol is disabled.
 
 	* src/net/http_client.c: 
 	* include/net/http.h: Improve parsing of HTTP responses for errors.
